[package]
name = "escrow-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
solana-client = "2.2.0"
solana-sdk = "2.2.0"
tokio = { version = "1.48.0", features = ["full"] }
spl-token = { version = "5.0.2", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
thiserror = "2.0.17"
dotenv = "0.15.0"
escrow-native={path="../escrow-native"}
colored = "3.0.0"
